--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <img src="c2.jpg" alt="C programming language">
                 <div class="card-content">
                     <h2>C language</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt exercitationem iste, voluptatum, quia explicabo laboriosam rem adipisci voluptates cumque, veritatis atque nostrum corrupti ipsa asperiores harum? Dicta odio aut hic.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. ue, veritatis atque nostrum corrupti ipsa asperiores harum? Dicta odio aut hic.</p>
                     <a href="#" class="button">
                         Find out more 
                         <span class="material-symbols-outlined">arrow_right_alt</span>
@@ -75,7 +75,7 @@
                 <img src="java.jpg" alt="C programming language">
                 <div class="card-content">
                     <h2>Java</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt exercitationem iste, voluptatum, quia explicabo laboriosam rem adipisci voluptates cumque, veritatis atque nostrum corrupti ipsa asperiores harum? Dicta odio aut hic.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adiposam rem adipisci voluptates cumque, veritatis atque nostrum corrupti ipsa asperiores harum? Dicta odio aut hic.</p>
                     <a href="#" class="button">
                         Find out more 
                         <span class="material-symbols-outlined">arrow_right_alt</span>
@@ -87,7 +87,7 @@
                 <img src="py2.jpg" alt="C programming language">
                 <div class="card-content">
                     <h2>Python</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt exercitationem iste, voluptatum, quia explicabo laboriosam rem adipisci voluptates cumque, veritatis atque nostrum corrupti ipsa asperiores harum? Dicta odio aut hic.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. i voluptates cumque, veritatis atque nostrum corrupti ipsa asperiores harum? Dicta odio aut hic.</p>
                     <a href="#" class="button">
                         Find out more 
                         <span class="material-symbols-outlined">arrow_right_alt</span>
@@ -99,7 +99,7 @@
                 <img src="html.jpg" alt="C programming language">
                 <div class="card-content">
                     <h2>HTML,CSS,JavaScript</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt exercitationem iste, voluptatum, quia explicabo laboriosam rem adipisci voluptates cumque, veritatis atque nostrum corrupti ipsa asperiores harum? Dicta odio aut hic.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nescsam rem adipisci voluptates cumque,que nostrum corrupti ipsa asperiores harum? Dicta odio aut hic.</p>
                     <a href="#" class="button">
                         Find out more 
                         <span class="material-symbols-outlined">arrow_right_alt</span>
