--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
     <script src="script.js"></script>
     
-    <title>Document</title>
+    <title>Harshit's Portfolio</title>
 </head>
 <body>
     <header>
